still failures, need to refactor management of query columns.